<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shapecolor">
    <include layout="@layout/back_toolbar"
        android:id="@+id/step_count_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_62dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="@dimen/dimen_180dp"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_step_count">
            <com.example.root.sportshelper.fonts.Black_Simplified_TextView
                android:id="@+id/day"
                android:layout_width="@dimen/dimen_58dp"
                android:layout_height="@dimen/dimen_28dp"
                android:gravity="center"
                android:text="@string/day"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/color_2387f5"
                android:background="@drawable/select_shape"/>
            <com.example.root.sportshelper.fonts.Black_Simplified_TextView
                android:id="@+id/week"
                android:layout_width="@dimen/dimen_58dp"
                android:layout_height="@dimen/dimen_28dp"
                android:gravity="center"
                android:text="@string/week"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/color_ffffffff"
                android:background="@drawable/unselect_shape"/>
            <com.example.root.sportshelper.fonts.Black_Simplified_TextView
                android:id="@+id/month"
                android:layout_width="@dimen/dimen_58dp"
                android:layout_height="@dimen/dimen_28dp"
                android:gravity="center"
                android:text="@string/mouth"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/color_ffffffff"
                android:background="@drawable/unselect_shape"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/DayWeekMonth"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_weight="@dimen/weight_1"/>
</LinearLayout>