<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inrunning_shapecolor"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <com.example.root.sportshelper.fonts.Black_Simplified_TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_18dp"
            android:text="@string/gps"
            android:textSize="@dimen/dimen_12sp"
            android:textColor="@color/color_ffffffff"
            android:layout_marginLeft="@dimen/dimen_14dp"/>
        <ImageView
            android:layout_width="@dimen/dimen_14dp"
            android:layout_height="@dimen/dimen_18dp"
            android:src="@mipmap/ic_runing_gps_3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/in_running"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_20sp" />
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_214dp"
        android:orientation="vertical"
        android:background="@mipmap/ic_run_road">
        <LinearLayout
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_134dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <com.example.root.sportshelper.fonts.Black_Simplified_TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/color_8affffff"
                android:gravity="center"/>
            <com.example.root.sportshelper.fonts.AccidentalPresidency_TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                android:layout_weight="@dimen/weight_1"
                android:textSize="@dimen/dimen_105sp"
                android:textColor="@color/color_ffffffff"
                android:gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_144dp">
        <LinearLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_1"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_104dp"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/dimen_24dp"
                    android:layout_height="@dimen/dimen_24dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_runing_pace"/>
                <com.example.root.sportshelper.fonts.AccidentalPresidency_TextView
                    android:id="@+id/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_42sp"
                    android:textColor="@color/color_ffffffff"/>
                <com.example.root.sportshelper.fonts.Black_Simplified_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_0dp"
                    android:layout_weight="@dimen/weight_1"
                    android:layout_gravity="center"
                    android:text="@string/speed"
                    android:textSize="@dimen/dimen_12sp"
                    android:textColor="@color/color_8affffff"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_1"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_104dp"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/dimen_24dp"
                    android:layout_height="@dimen/dimen_24dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_runing_time"/>
                <com.example.root.sportshelper.fonts.AccidentalPresidency_TextView
                    android:id="@+id/UseTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_42sp"
                    android:textColor="@color/color_ffffffff"/>
                <com.example.root.sportshelper.fonts.Black_Simplified_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_0dp"
                    android:layout_weight="@dimen/weight_1"
                    android:layout_gravity="center"
                    android:text="@string/used_time"
                    android:textSize="@dimen/dimen_12sp"
                    android:textColor="@color/color_8affffff"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/weight_1"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_104dp"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/dimen_24dp"
                    android:layout_height="@dimen/dimen_24dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_runing_calories"/>
                <com.example.root.sportshelper.fonts.AccidentalPresidency_TextView
                    android:id="@+id/ExpendCalorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_42sp"
                    android:textColor="@color/color_ffffffff"/>
                <com.example.root.sportshelper.fonts.Black_Simplified_TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_0dp"
                    android:layout_weight="@dimen/weight_1"
                    android:layout_gravity="center"
                    android:text="@string/kilocalorie"
                    android:textSize="@dimen/dimen_12sp"
                    android:textColor="@color/color_8affffff"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_weight="@dimen/weight_1">
        <com.example.root.sportshelper.ruler.LongpressCircle
            android:id="@+id/longpress_suspend"
            android:layout_width="@dimen/dimen_90dp"
            android:layout_height="@dimen/dimen_90dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_26dp"
            app:PauseText="长按暂停"
            app:PauseTextSize="16sp"/>
        <LinearLayout
            android:id="@+id/ContinueOrend"
            android:layout_width="@dimen/dimen_272dp"
            android:layout_height="@dimen/dimen_90dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_26dp">
            <LinearLayout
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/weight_1"
                android:orientation="vertical">
                <com.example.root.sportshelper.fonts.Black_Simplified_TextView
                    android:id="@+id/Continue"
                    android:layout_width="@dimen/dimen_90dp"
                    android:layout_height="@dimen/dimen_90dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/ic_runing_go_on_nor"
                    android:text="@string/Continue"
                    android:textSize="@dimen/dimen_18sp"
                    android:textColor="@color/color_ffffffff"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/weight_1"
                android:orientation="vertical">
                <com.example.root.sportshelper.fonts.Black_Simplified_TextView
                    android:id="@+id/end"
                    android:layout_width="@dimen/dimen_90dp"
                    android:layout_height="@dimen/dimen_90dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/ic_runing_end_nor"
                    android:text="@string/end"
                    android:textSize="@dimen/dimen_18sp"
                    android:textColor="@color/color_ffffffff"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/showMap"
            android:layout_width="@dimen/dimen_48dp"
            android:layout_height="@dimen/dimen_48dp"
            android:src="@mipmap/ic_runing_map_nor"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_16dp"/>
        <com.example.root.sportshelper.ruler.SlideLockView
            android:id="@+id/SlideLock"
            android:layout_width="@dimen/dimen_192dp"
            android:layout_height="@dimen/dimen_42dp"
            android:background="@drawable/shape_slide_lock_bg"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/dimen_96dp"
            app:lock_drawable="@mipmap/ic_unlock_nor"
            app:lock_radius="20dp"
            app:lock_tips_tx="向右滑动解锁"
            app:lock_tips_tx_color="#80ffffff"
            app:locl_tips_tx_size="15sp"/>
    </RelativeLayout>
</LinearLayout>
